--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </section>
             <div id="spriteDiv">
-                <img id="sprite" src="Resources/order/ferret_guy.png">
+                <img id="sprite">
             </div>
         </main>
         <footer id="theCounter">
