Finished character appearences

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </section>
             <div id="spriteDiv">
-                <img id="sprite">
+                <img class="sprite" id="Medium">
             </div>
         </main>
         <footer id="theCounter">
