--- a/Pages/endDay/endDay.html
+++ b/Pages/endDay/endDay.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Snowburst+One&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Shift Stats</h1> <!--change to Day # when cookies added-->
+        <h1 id="heading">Shift Stats</h1> <!--change to Day # when cookies added-->
         <main>
           <section>
           </section>
@@ -20,6 +20,7 @@
         </main>
         <p id="continue"><a href="../../index.html">Continue</a></p>
         <script src="endDay.js"></script>
+        <script>genHeader()</script>
         <script>genStats()</script>
        <script>saveAndClear()</script>
     </body>
