added images, eddited drinkmaker.css, endday.css, endday.html, and endday.js

--- a/Pages/endDay/endDay.html
+++ b/Pages/endDay/endDay.html
@@ -14,6 +14,7 @@
         <h1 id="heading">Shift Stats</h1> <!--change to Day # when cookies added-->
         <main>
           <section>
+            <img src="../../Resources/endDay/cal_1.gif">
           </section>
           <div id="textArea">
           </div>
