fixed end of day screen and made gameEnd screen

--- a/Pages/endDay/endDay.html
+++ b/Pages/endDay/endDay.html
@@ -14,15 +14,15 @@
         <h1 id="heading">Shift Stats</h1> <!--change to Day # when cookies added-->
         <main>
           <section>
-            <img src="../../Resources/endDay/cal_1.gif">
+            <img>
           </section>
           <div id="textArea">
           </div>
         </main>
-        <p id="continue"><a href="../../index.html">Continue</a></p>
         <script src="endDay.js"></script>
         <script>genHeader()</script>
         <script>genStats()</script>
-       <script>saveAndClear()</script>
+        <script>updateCal()</script>
+        <p id="continue"><a href="../../index.html" onclick="saveAndClear()">Continue</a></p>
     </body>
 </html>
