finalized order page code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <div id="textBox">
                     <h1>Customer Name</h1>
                     <p id="dialouge"></p> <!--autofit text in js later-->
-                    <p id="acknowledgeDialouge"><!--<a href="Pages/drinkMaker/drinkMaker.html">OK</a>--><p>
+                </div>
+                <div id="respond">
+                 <p id="acknowledgeDialouge"><!--<a href="Pages/drinkMaker/drinkMaker.html">OK</a>--><p></p>
                 </div>
             </section>
             <div id="spriteDiv">
